insert functionality and basic testing
implemented basic insert functionality and tested insertions up to height =3